fix: nav overflow

--- a/assets/main.css
+++ b/assets/main.css
@@ -457,18 +457,18 @@ a {
   height: 36px;
 }
 .navbar-overlay {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   width: 100vw;
   height: 100vh;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  pointer-events: none;
-  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 9999;
   opacity: 0;
-  transition: all 0.5s ease;
+  pointer-events: none;
+  transition: all 0.3s ease-in-out;
 }
 .navbar-overlay.show {
   opacity: 1;
@@ -476,6 +476,7 @@ a {
   transition: all 0.5s ease;
 }
 .navbar-overlay.show-transparent {
+  opacity: 1;
   pointer-events: auto;
 }
 
@@ -538,7 +539,7 @@ a {
   gap: 32px;
 }
 .dropdown-right.dropdown-active {
-  right: 20px;
+  right: 0;
   transition: all 0.5s ease;
   z-index: 3;
 }
