--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -44,19 +44,42 @@
   &-logo {
     height: 36px;
   }
+  // &-overlay {
+  //   position: fixed;
+  //   width: 100vw;
+  //   height: 100vh;
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  //   background-color: rgba(0,0,0,0.4);
+  //   pointer-events: none;
+  //   z-index: -1;
+  //   opacity: 0;
+  //   transition: all .5s ease;
+
+  //   &.show {
+  //     opacity: 1;
+  //     pointer-events: auto;
+  //     transition: all .5s ease;
+  //   }
+  //   &.show-transparent {
+  //     pointer-events: auto;
+  //   }
+  // }
   &-overlay {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     width: 100vw;
     height: 100vh;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0,0,0,0.4);
-    pointer-events: none;
-    z-index: -1;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 9999;
     opacity: 0;
-    transition: all .5s ease;
+    pointer-events: none;
+    transition: all 0.3s ease-in-out;
 
     &.show {
       opacity: 1;
@@ -64,6 +87,7 @@
       transition: all .5s ease;
     }
     &.show-transparent {
+      opacity: 1;
       pointer-events: auto;
     }
   }
@@ -120,7 +144,7 @@
   @include flex-box(column, flex-start, stretch, 32px);
 
   &.dropdown-active {
-    right: 20px;
+    right: 0;
     transition: all .5s ease;
     z-index: 3;
   }
